fix marketing overflow

--- a/src/web/web/static-src/less/aerofs-marketing.less
+++ b/src/web/web/static-src/less/aerofs-marketing.less
@@ -581,6 +581,19 @@ body .gold-button {
 }
 
 /* Special styles for press summary and customer testimonials sections */
+
+/* Special styling for private cloud frontpage section*/
+.simple-use {
+    overflow: hidden;
+    .img-wrapper {
+        width: 1071px;
+        height: 545px;
+        position: absolute;
+        top: -@navheight;
+        left: 60px;
+        background: url('../../images/product_simple_use_big.png') no-repeat center;
+    }
+}
 .simple-home { 
     background: @oatmeal;
 }
